{
    "name": "PlayerCharacterControls",
    "maps": [
        {
            "name": "Default",
            "id": "0bff7652-c2fe-46e9-b14d-923f9d4af627",
            "actions": [
                {
                    "name": "MoveInDirection",
                    "type": "PassThrough",
                    "id": "f2356bac-b720-4782-9514-7f1e9e4e56ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveToPoint",
                    "type": "Button",
                    "id": "5eca29a7-f258-4e12-ad5e-6d7c88253efb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerScreenPosition",
                    "type": "PassThrough",
                    "id": "408e9b60-2e01-4d7e-87d8-590668c8a3db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "ac3a3bdf-cb2e-4f96-8269-6a39828f306b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e57e8eaa-04d7-415d-8aed-a8f89abd7da0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "936709f9-8de5-4cf1-9352-96990f5de01a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2c2b7396-4dbc-44a5-9fa5-cfb018254202",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7d3803b0-9952-4838-a5bd-95275eb9cc80",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fc165def-dcdf-4c72-a339-b95ef742ca44",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "984abc9f-f41a-4f3e-ae18-dd9cd62d66a7",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}